fixed quiz back button alignment

--- a/src/App.css
+++ b/src/App.css
@@ -245,7 +245,6 @@ area:hover {
 .buttons button {
   font-size: 18px;
   padding: 15px 30px;
-  margin: 25px;
   cursor: pointer;
   border-radius: 30px;
   text-decoration: none;
